[metadata]
name = viur-ext
version = 0.0.3
author = Andreas H. Kelch
author_email = ak@mausbrand.de
description = Viur-Extension is a collection of additional functions for the ViUR-Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/XeoN-GHMB/viur_ext
project_urls =
    Bug Tracker = https://github.com/XeoN-GHMB/viur_ext/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =


[options.packages.find]
where = src